--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "lucide-react": "^0.556.0",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
+    "rate-limiter-flexible": "^9.0.1",
     "react": "19.2.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
